# GooberEngine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  PixelDataStructure.txt  README.md  Raycaster  cmake_install.cmake  main.cpp  make_sourcelist.py  sourcelist.cmake
.cache/clangd/index/: AE.h.59773E026633990F.idx  AEDataModel.h.5B65C33FA186174C.idx  AEHelpers.h.D23A3032CD617488.idx  AEInteraction.h.E62403975352CA3F.idx  AEMach.h.857CE95843CBCB30.idx  AEObjects.h.81A9993D7C78BB38.idx  AEPackObject.h.85717EC875896F62.idx  AERegistry.h.959C96CA94817753.idx  AEUserTermTypes.h.AF3D345120EB6499.idx  AIFF.h.230A89B34E6E7F7D.idx  ASDebugging.h.5B98893A784E9CEF.idx  ASRegistry.h.2A82CA337732B341.idx  ATS.h.0A977AFA9AF3F06A.idx  ATSAvailability.h.3F9562A9E818D627.idx  ATSDefines.h.450B0A1981CB44C0.idx  ATSFont.h.F5BC4A34FEA0802F.idx  ATSLayoutTypes.h.86090F2A60E16096.idx  ATSTypes.h.93391A3F9367473F.idx  ATSUnicode.h.E61D2505DDABC4C6.idx  ATSUnicodeDirectAccess.h.531336E0EEE8F605.idx  ATSUnicodeFlattening.h.4EB8F9E277672DE1.idx  ATSUnicodeGlyphs.h.287CA970CE66800C.idx  (+3471 more)
goober/: GameWindow.cpp  GameWindow.hpp  GameWindowManager.cpp  GameWindowManager.hpp  GooberPoint.cpp  GooberPoint.hpp  GooberRay.hpp  GooberRaycaster.hpp  GooberWindowManager.cpp  GooberWindowManager.hpp
include/: GooberGame.hpp  GooberPoint.hpp  GooberProjectConfigLoader.hpp  GooberRay.hpp  GooberRaycaster.hpp  GooberWindowManager.hpp  Player.hpp  constants.hpp
settings/: config.yaml
src/: Game.cpp  GooberGame.cpp  GooberPoint.cpp  GooberProjectConfigLoader.cpp  GooberRay.cpp  GooberRaycaster.cpp  GooberWindowManager.cpp  Player.cpp  main.cpp
